[build-system]
requires = ["setuptools>=64", "setuptools_scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "ctxcore"
dynamic = ["version"]
description = "Core functions for pycisTarget and the SCENIC tool suite"
readme = { file = "README.rst", content-type = "text/x-rst" }
requires-python = ">=3.8"
license = { text = "GNU General Public License v3" }
authors = [
  { name = "Bram Van de Sande" },
  { name = "Gert Hulselmans", email = "gert.hulselmans@kuleuven.be" },
]
maintainers = [
  { name = "Gert Hulselmans", email = "gert.hulselmans@kuleuven.be" },
]
keywords = ["ctxcore", "cisTarget", "pycisTarget", "SCENIC", "pySCENIC", "pycisTopic", "scenicplus"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "cytoolz",
  "diptest",
  "frozendict",
  "numba>=0.57.0",
  "numpy",
  "pandas>=1.5",
  "pyarrow>=14.0.0",
  "pyyaml",
  "scipy",
  "scikit-learn>=0.22.2",
  "tqdm",
]

[project.urls]
Homepage = "https://github.com/aertslab/ctxcore"
Documentation = "https://ctxcore.readthedocs.io/"
Repository = "https://github.com/aertslab/ctxcore"
Changelog = "https://github.com/aertslab/ctxcore/blob/main/CHANGELOG.rst"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
where = ["src"]
namespaces = false

[tool.setuptools_scm]
version_file = "src/ctxcore/_version.py"

[tool.mypy]
show_column_numbers = true
disallow_untyped_calls = true
disallow_untyped_defs = true
follow_imports = "skip"
no_implicit_optional = true
warn_no_return = true

[tool.ruff]
line-length = 88
fix = true

[tool.ruff.lint]
select = [
  "ANN", # flake8-annotations
  "B", # flake8-bugbear
  "C4", # flake8-comprehensions
  "D", # flake8-docstrings
  "E", # pycodestyle
  "EM", # flake8-errmsg
  "F", # pyflakes
  "FA", # flake8-future-annotations
  "FBT001", # flake8-boolean-trap
  "I", # isort
  "ICN", # flake8-import-conventions
  "INT", # flake8-gettext
  "PERF", # perflint
  "PIE", # flake8-pie
  "PT", # flake8-pytest-style
  "PTH", # flake8-use-pathlib
  "PYI", # flake8-pyi
  "RUF", # ruff-specific rules
  "SIM", # flake8-simplify
  "TCH", # flake8-type-checking
  "TD", # flake8-todos
  "TID", # flake8-tidy-imports
  "TRY", # tryceratops
  "UP", # pyupgrade
  "W", # pycodestyle
]

ignore = [
  # ------------------------------------------------------------------
  # TODO: Remove errors below to further improve docstring linting
  # ------------------------------------------------------------------
  "D100", # Missing docstring in public module
  "D104", # Missing docstring in public package
  "D105", # Missing docstring in magic method
  # ------------------------------------------------------------------
  "ANN401", # Dynamically typed expressions (Any) are disallowed
  "D401", # Relax NumPy docstring convention: first line should be imperative
  "E501", # Line length regulated by formatter
  "PT011", # pytest.raises is too broad, set match or use a more specific exception
  "PYI041", # Use float instead of int | float
  "RUF022", # `__all__` is not sorted
  "RUF005", # Consider expression instead of concatenation
  "SIM102", # Use a single `if` statement instead of nested `if` statements
  "SIM108", # Use ternary operator
  "SIM114", # Combine `if` branches
  "TD002", # Missing author in TODO
  "TD003", # Missing issue link on the line following this TODO
  "TRY003", # Avoid specifying long messages outside the exception class
]

[tool.ruff.lint.per-file-ignores]
"src/ctxcore/ctdb.py" = [
  "D205", # 1 blank line required between summary line and description
  "PYI051", # `Literal["x"]` is redundant in a union with `str`
  "W505", # Doc line too long
]
"src/ctxcore/datatypes.py" = [
  "D102", # Missing docstring in public method
  "D205", # 1 blank line required between summary line and description
]
"src/ctxcore/genesig.py" = [
  "D102", # Missing docstring in public method
  "ANN001", # Missing type annotation for function argument
  "ANN003", # Missing type annotation for
]
"src/ctxcore/rnkdb.py" = [
  "D102", # Missing docstring in public method
]
"tests/test_datatypes.py" = [
  "D205", # 1 blank line required between summary line and description
  "W505", # Doc line too long
]
"tests/test_featherdb.py" = [
  "D103", # Missing docstring in public function
]
"tests/test_genesig.py" = [
  "D103", # Missing docstring in public function
]
"tests/test_recovery.py" = [
  "D103", # Missing docstring in public function
]

[tool.ruff.lint.pycodestyle]
max-doc-length = 88

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.flake8-type-checking]
strict = true

[tool.ruff.format]
docstring-code-format = true
